# VetRAG

./: .gitignore  README.md  TODO.md  accomplishments.md  check.py  check_quality.py  commit_msg.txt  download_qwen3.py  download_qwen3_1b7.py  workflow.md
VetRAG/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODO.md  build_index.py  docker-compose.yml  example2_result.txt  full_chain_test_report.json  knowledge.md  makefile  pyproject.toml  pytest.ini  rag_interface.py  requirements-lock.txt  requirements.txt  run.py  web_api.py  workflow.md
VetRAG/.claude/: settings.json
VetRAG/.claude/rules/: ollama.md  python.md  testing.md
VetRAG/.github/workflows/: ci.yml
VetRAG/data/: behaviors.json  breeds.json  cares.json  diseases.json  pharmaceuticals.json  surgeries.json
VetRAG/docs/: api.md  deployment.md  rag_pipeline.md
VetRAG/envs/: .env.example
VetRAG/eval/: __init__.py  ab_experiment.py  llm_judge.py
VetRAG/eval/datasets/: __init__.py  testset.json  testset_50.json
VetRAG/eval/scoring/: __init__.py  deepseek_judge.py  judge_base.py
VetRAG/eval/scripts/: __init__.py  rerun_cleaned_benchmark.py  run_ab.py  run_benchmark_vs_deepseek.py  run_deepseek_judge.py
VetRAG/finetune_steps/: finetune_qlora.py  log.txt  prepare_data.py  preprocess_data.py  qlora_finetune.py  test_after_finetuning.py  test_before_finetuning.py  upload_to_hf.py
VetRAG/finetune_steps/configs/: data_config.yaml  training_config.yaml
VetRAG/finetune_steps/datas/: test.jsonl  val.jsonl
VetRAG/finetune_steps/faq_json/: faq1.json  faq1_句式变换.json  faq1_否定反事实.json  faq1_噪声注入.json  faq1_情景扩展.json  faq1_特征衍生.json  faq1_类比迁移.json  faq1_跨语言文化.json  faq1_通用化改写.json  faq2_否定反事实.json  faq2_噪声注入.json  faq2_情景扩展.json  faq2_结合禁忌.json  faq2_通用化改写.json  faq3.json  faq3_句式变换.json  faq3_噪声注入.json  faq3_回译增强.json  faq3_情感变换.json  faq3_情景扩展.json  faq3_特征衍生.json  faq4.json  faq4_同义改写.json  faq4_回译增强.json  faq4_情感变换.json  faq4_特征衍生.json  faq5.json  faq5_同义改写.json  faq5_否定反事实.json  faq5_回译增强.json  faq5_情感变换.json  faq5_跨语言文化.json  faq6.json  faq6_同义改写.json  faq6_情感变换.json  faq6_情景扩展.json  faq6_特征衍生.json  faq6_结合禁忌.json  faq7.json  faq7_同义改写.json  (+4 more)
VetRAG/scripts/: __init__.py  build_index.py  clean_up.py  convert_to_gguf.py  enrich_pharmaceuticals.py  extract_drugs.py  merge_lora.py  run.py  setup_ollama.py  web_api.py
VetRAG/scripts/modelfiles/: Modelfile.qwen3-0.6b-base  Modelfile.qwen3-0.6b-vet  Modelfile.qwen3-0.6b-vet1  Modelfile.qwen3-1.7b-base  Modelfile.qwen3-1.7b-vet
VetRAG/src/: __init__.py  increment_manager.py  json_loader.py  rag_interface.py  rag_pipeline.py  test_full_chain.py  vector_store_chroma.py
VetRAG/src/core/: __init__.py  config.py  domain_guard.py  logging.py
VetRAG/src/retrievers/: __init__.py  bm25_index.py  hybrid_retriever.py
VetRAG/static/: index.html
VetRAG/temp/: test_three_examples.py
VetRAG/tests/: __init__.py  conftest.py
VetRAG/tests/api/: __init__.py  test_web_api.py
VetRAG/tests/core/: __init__.py  test_config.py
VetRAG/tests/rag/: __init__.py  (+4 more)
(+204 files in other folders)
