[project]
name = "vetrag"
version = "0.1.0"
description = "兽医领域 RAG 问答系统，基于 Qwen3 本地推理"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "VetRAG Team" }
]
keywords = ["rag", "veterinary", "qwen", "llm", "retrieval-augmented-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.5.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "datasets>=2.18.0",
    "bitsandbytes>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "httpx>=0.27.0",
]
finetune = [
    "peft>=0.10.0",
    "trl>=0.8.0",
    "datasets>=2.18.0",
    "bitsandbytes>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/vetrag"
Repository = "https://github.com/your-repo/vetrag"

[project.scripts]
vetrag-api = "web_api:main"
vetrag-build = "build_index:main"
vetrag-run = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "E402", "B005", "B008", "N802", "N803", "N806", "SIM112", "SIM117"]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["tests/", "finetune_steps/", "scripts/", "llama.cpp/"]
warn_unused_configs = true
check_untyped_defs = false
warn_return_any = false
disallow_untyped_decorators = false
warn_redundant_casts = false
no_implicit_optional = false
disable_error_code = ["var-annotated", "assignment", "return-value", "arg-type", "union-attr"]

[tool.bandit]
exclude_dirs = ["tests", "finetune_steps", "eval", "llama.cpp", "study_materials"]
skips = ["B101", "B104", "B110", "B112", "B301", "B403"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/finetune_steps/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
